ch-11 Cracking an MD5 or SHA-256 Hash

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -39,3 +39,42 @@ Go官方的 `crypto`包中所有功能和子包的完整列表，请参阅 `http
 如前所述，哈希是一种单向函数，用于根据变长输入生成固定长度、概率唯一的输出。不能反向哈希值来恢复原始输入数据。哈希通常用于存储原始明文数据，以后不再处理或验证数据的完整性。例如，糟糕的做法是存储明文密码；相反，应该存储哈希（最好是加点佐料，以确保重复值之间的随机性）。
 
 通过两个例子来演示Go中的哈希。第一个例子是尝试使用离线字典来破解给定的MD5或SHA-512哈希。第二个例子是演示 `bcrypt` 的实现。如前所述，`bcrypt` 是一种用于哈希敏感数据（例如密码）的更安全的算法。该算法还有降低其速度的功能，这使得破解密码更加困难。
+
+#### 破解MD5或SHA-512哈希
+
+清单11-1是哈希破解代码。（`/`根目录中的所有代码都在github 仓库 `https://github.com/blackhat-go/bhg/` 中。）由于哈希不是可逆的，因此代码会尝试通过生成常见单词（从单词列表中提取）的哈希，然后将生成的哈希值与当前的哈希进行比较，来猜测哈希的明文。如果两个哈希值匹配，则可能就猜到了明文值。
+
+```go
+var md5hash = "77f62e3524cd583d698d51fa24fdff4f"
+var sha256hash = "95a5e1547df73abdd4781b6c9e55f3377c15d08884b11738c2727dbd887d4ced"
+func main() {
+	f, err := os.Open("wordlist.txt")
+    if err != nil {
+		log.Fatalln(err) 
+    }
+	defer f.Close()
+	scanner := bufio.NewScanner(f) 
+    for scanner.Scan() {
+		password := scanner.Text()
+		hash := fmt.Sprintf("%x", md5.Sum([]byte(password))x) 
+        if hash == md5hash {
+			fmt.Printf("[+] Password found (MD5): %s\n", password) 
+        }
+		hash = fmt.Sprintf("%x", sha256.Sum256([]byte(password))) 
+        if hash == sha256hash {
+			fmt.Printf("[+] Password found (SHA-256): %s\n", password) 
+        }
+	}
+	if err := scanner.Err(); err != nil { 
+        log.Fatalln(err)
+	} 
+}
+```
+
+清单 11-1: 破解 MD5 和 SHA-256 哈希 (/ch-11/hashes/main.go)
+
+首先定义两个保存目标哈希值的变量。一个是MD5 哈希，另一个是SHA-256 哈希。想象一下，您是在后漏洞阶段获取了这两个哈希，并试图通过运行散列算法生成它们的输入（明文密码）。通常可以通过检查哈希值的长度来确定算法。找到与目标匹配的哈希后，就知道是正确的输入了。
+
+使用之前创建的字典文件作为输入列表。另外，谷歌一下可以帮助找到常用密码的字典文件。要检查MD5哈希，请打开字典文件并通过在文件描述符上创建 `bufio.Scanner` 逐行读取。每行是一个要检查的密码。将当前密码传递给 `md5.Sum(input [] byte)` 函数。此函数生成原生的MD5哈希值，因此可以使用 `fmt.Sprintf()` 函数和格式字符串 `％x`将其转换为十六进制字符串。毕竟，`md5hash` 变量由目标哈希的十六进制格式的字符串组成。转换该值可确保随后可以比较目标哈希值和计算得出的哈希值。如果这些哈希匹配，则程序会向stdout输出一条成功消息。
+
+执行类似的过程来计算和比较SHA-256哈希。该实现与MD5代码非常相似。唯一真正的区别是，`sha256`包中有计算各种SHA散列长度的附加函数。与其调用 `sha256. sum()` （一个不存在的函数），不如调用 `sha256.Sum256(input []byte)` 强制使用SHA-256算法计算哈希值。就像在MD5示例中所做的一样，将原始字节转换为十六进制字符串，并比较SHA-256哈希值以查看是否有匹配项
