ch-11 Implementing bcrypt

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -36,7 +36,7 @@ Go官方的 `crypto`包中所有功能和子包的完整列表，请参阅 `http
 
 ### 探索哈希
 
-如前所述，哈希是一种单向函数，用于根据变长输入生成固定长度、概率唯一的输出。不能反向哈希值来恢复原始输入数据。哈希通常用于存储原始明文数据，以后不再处理或验证数据的完整性。例如，糟糕的做法是存储明文密码；相反，应该存储哈希（最好是加点佐料，以确保重复值之间的随机性）。
+如前所述，哈希是一种单向函数，用于根据变长输入生成固定长度、概率唯一的输出。不能反向哈希值来恢复原始输入数据。哈希通常用于存储原始明文数据，以后不再处理或验证数据的完整性。例如，糟糕的做法是存储明文密码；相反，应该存储哈希（最好是加点佐料，即随机值，以确保重复值之间的随机性）。
 
 通过两个例子来演示Go中的哈希。第一个例子是尝试使用离线字典来破解给定的MD5或SHA-512哈希。第二个例子是演示 `bcrypt` 的实现。如前所述，`bcrypt` 是一种用于哈希敏感数据（例如密码）的更安全的算法。该算法还有降低其速度的功能，这使得破解密码更加困难。
 
@@ -77,4 +77,67 @@ func main() {
 
 使用之前创建的字典文件作为输入列表。另外，谷歌一下可以帮助找到常用密码的字典文件。要检查MD5哈希，请打开字典文件并通过在文件描述符上创建 `bufio.Scanner` 逐行读取。每行是一个要检查的密码。将当前密码传递给 `md5.Sum(input [] byte)` 函数。此函数生成原生的MD5哈希值，因此可以使用 `fmt.Sprintf()` 函数和格式字符串 `％x`将其转换为十六进制字符串。毕竟，`md5hash` 变量由目标哈希的十六进制格式的字符串组成。转换该值可确保随后可以比较目标哈希值和计算得出的哈希值。如果这些哈希匹配，则程序会向stdout输出一条成功消息。
 
-执行类似的过程来计算和比较SHA-256哈希。该实现与MD5代码非常相似。唯一真正的区别是，`sha256`包中有计算各种SHA散列长度的附加函数。与其调用 `sha256. sum()` （一个不存在的函数），不如调用 `sha256.Sum256(input []byte)` 强制使用SHA-256算法计算哈希值。就像在MD5示例中所做的一样，将原始字节转换为十六进制字符串，并比较SHA-256哈希值以查看是否有匹配项
+执行类似的过程来计算和比较SHA-256哈希。该实现与MD5代码非常相似。唯一真正的区别是，`sha256`包中有计算各种SHA散列长度的附加函数。与其调用 `sha256. sum()` （一个不存在的函数），不如调用 `sha256.Sum256(input []byte)` 强制使用SHA-256算法计算哈希值。就像在MD5示例中所做的一样，将原始字节转换为十六进制字符串，并比较SHA-256哈希值以查看是否有匹配项。
+
+#### 实现 **bcrypt**
+
+下一个示例展示了如何使用 `bcrypt` 加密和验证密码。与SHA和MD5不同，`bcrypt` 是为密码哈希设计的，与SHA或MD5系列相比，它成为程序员的更好选择。默认情况下， `bcrypt` 包含一个”佐料“，以及一个运行该算法更加耗费资源的成本因素。该成本因素控制着内部加密函数的迭代次数，从而增加了破解密码哈希所需的时间和精力。尽管仍然可以使用字典或暴力来破解密码，但是成本（时间）会显着增加，从而阻止了对时间敏感的漏洞后的破解。随着时间的推移，还可能会增加成本，以应对计算能力的提高。这使其可以适应将来的破解攻击。
+
+清单11-2创建了一个bcrypt哈希，然后验证明文密码是否与给定的bcrypt哈希匹配。
+
+```go
+import ( 
+    "log"
+ 	"os"
+    "golang.org/x/crypto/bcrypt"
+)
+var storedHash = "$2a$10$Zs3ZwsjV/nF.KuvSUE.5WuwtDrK6UVXcBpQrH84V8q3Opg1yNdWLu"
+
+func main() {
+	var password string
+	if len(os.Args) != 2 {
+		log.Fatalln("Usage: bcrypt password") 
+    }
+	password = os.Args[1]
+    hash, err := bcrypt.GenerateFromPassword( 
+        []byte(password),
+		bcrypt.DefaultCost, 
+    )
+    if err != nil { 
+        log.Fatalln(err)
+	}
+	log.Printf("hash = %s\n", hash)
+    err = bcrypt.CompareHashAndPassword([]byte(storedHash), []byte(password)) 
+    if err != nil {
+		log.Println("[!] Authentication failed")
+		return 
+    }
+	log.Println("[+] Authentication successful")
+}
+```
+
+清单 11-2: 比较 bcrypt 哈希 (/ch-11/bcrypt/main.go)
+
+对于本书中的大多数代码示例，都省略了包的导入。在此示例中包含了它们，以明确表示正在使用补充的Go包`golang.org/x/crypto/bcrypt`，因为Go的标准包中没有 `bcrypt` 相关功能。然后，初始化变量 `storedHash`，该变量包含一个预先计算的，`bcrypt` 编码的哈希。这是为了演示设计的例子;的目的，硬编码一个值，而不是将示例代码连接到数据库来获取值。例如，该变量可能表示数据库中某一行值，该行存储了前端Web程序的用户身份验证信息。
+
+接下来，根据明文密码值生成一个经过bcrypt编码的哈希。main函数读取密码值作为命令行参数，然后继续调用两个单独的bcrypt函数。第一个函数 `bcrypt.GenerateFromPassword()`接受两个参数：一个字节切片(表示明文密码)和一个成本。在此示例中，使用包里的默认值 `bcrypt.DefaultCost` 常量，在撰写本文时，该默认值为10。该函数返回编码的哈希值和产生的任何错误。
+
+第二个调用的bcrypt函数是` bcrypt.CompareHashAndPassword()` ， 用来进行哈希比较。它接受bcrypt编码的哈希和明文密码作为字节切片。该函数解析编码的哈希，以确定成本和随机值。然后，将这些值与明文密码值一起生成bcrypt哈希。如果生成的哈希值与从已编码的`storedHash` 值提取的哈希值匹配，则提供的密码与用于创建 `storedHash`的密码匹配。这是用于对SHA和MD5进行密码破解的方法，即通过哈希函数运行给定密码并将结果与存储的哈希进行比较。这里，不像SHA和MD5那样明确地比较生成的哈希，而是检查`bcrypt.CompareHashAndPassword()` 是否返回错误。如果有错误，则说明计算出的哈希值是正确的，因此用于计算它们的密码不匹配。
+
+以下是两个示例程序运行。第一个是不正确密码的输出：
+
+```sh
+$ go run main.go someWrongPassword
+2020/08/25 08:44:01 hash = $2a$10$YSSanGl8ye/NC7GDyLBLUO5gE/ng51l9TnaB1zTChWq5g9i09v0AC 
+2020/08/25 08:44:01 [!] Authentication failed
+```
+
+第二个是正确密码的输出：
+
+```sh
+$ go run main.go someC0mpl3xP@ssw0rd
+2020/08/25 08:39:29 hash = $2a$10$XfeUk.wKeEePNAfjQ1juXe8RaM/9EC1XZmqaJ8MoJB29hZRyuNxz. 
+2020/08/25 08:39:29 [+] Authentication successful
+```
+
+细心的可能会注意到，身份验证成功的显示的哈希与 `storedHash` 变量硬编码的值不匹配。回想下，代码调用了两个独立的函数。`GenerateFromPassword()` 函数使用随机值生成编码的哈希。使用不同的随机值，相同的密码将产生不同结果的哈希。因此,不同。`CompareHashAndPassword()` 函数通过使用与存储的哈希相同的随机值和成本来执行哈希算法，因此生成的哈希与`storedHash`变量中的哈希相同。
