ch-11 Symmetric-Key Encryption

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -181,3 +181,81 @@ func main() {
 `main()` 函数模拟从客户端接收消息的过程。如果确实收到了一条消息，则必须从传输中读取并解析HMAC和消息。由于这只是一个模拟，因此可以对接收到的消息和接收到的HMAC进行硬编码，然后对HMAC十六进制字符串进行解码，以便将其转换成 `[]byte`。可以使用if语句来调用 `checkMAC()`函数，并将接收到的消息和HMAC传递给该函数。如前所述，`checkMAC() 函数通过使用接收到的消息和共享密钥来计算HMAC，并返回布尔值来确定接收到的HMAC和计算出的HMAC是否匹配。
 
 尽管HMAC确实提供了真实性和完整性保证，但它不能确保私密性。无法确定是否未经授权的源看不到该消息。下一部分将通过探索和实现各种类型的加密来解决此问题。
+
+## 加密数据
+
+加密可能是最著名的加密概念。毕竟，隐私和数据保护由于备受瞩目的数据泄露而获得了大量新闻报道，这通常是由于未以加密格式存储了用户密码和其他敏感数据。即使没有媒体的注意，加密也应该引起黑帽和开发人员的关注。毕竟，了解基本过程和实现可能是有利可图的数据泄露与令人沮丧的攻击终止链之间的区别。下一节介绍了各种加密形式，包括有用的应用程序和每种用例。
+
+### 对称密钥加密
+
+以最直接的形式——对称密钥加密，进入加密之旅。这种模式是加密和解密都使用相同的密钥。Go使对称密码学变得非常简单，因为默认包或扩展包支持大多数常用算法。
+
+为了简洁，在一个示例中讲解对称密钥加密。假设要攻击一个组织。已经执行了必要的权限升级，横向移动和网络侦察，才能访问电子商务Web服务器和后端数据库。该数据库中有金融交易；但是，显然这些交易中使用的信用卡号已加密。检查Web服务器上的应用程序源代码，并确定组织正在使用高级加密标准（AES）的加密算法。AES支持多种操作方式，每种方式都有不同的注意事项和实现细节。方式间是不可互换的。用于解密的方式必须与用于加密的方式相同。
+
+在这种情况下，假设确定应用程序正在以密码块链接（CBC）方式使用AES。因此，让我们编写一个解密这些信用卡的功能（清单11-4）。假设对称密钥已在应用程序中进行了硬编码或在配置文件中进行了静态设置。在阅读本示例时，请记住，需要针对其他算法或密码调整此实现，但这是一个很好的起点。
+
+```go
+func unpad(buf []byte) []byte {
+	// Assume valid length and padding. Should add checks padding := int(buf[len(buf)-1])
+	return buf[:len(buf)-padding]
+}
+
+func decrypt(ciphertext, key []byte) ([]byte, error) {
+    var (
+		plaintext []byte
+		iv []byte
+		block cipher.Block 
+        mode cipher.BlockMode
+    	err error 
+    )
+    
+	if len(ciphertext) < aes.BlockSize {
+		return nil, errors.New("Invalid ciphertext length: too short")
+	}
+    
+	if len(ciphertext)%aes.BlockSize != 0 {
+		return nil, errors.New("Invalid ciphertext length: not a multiple of blocksize")
+	}
+    
+	iv = ciphertext[:aes.BlockSize]
+    ciphertext = ciphertext[aes.BlockSize:]
+    
+	if block, err = aes.NewCipher(key); err != nil {
+        return nil, err
+	}
+	mode = cipher.NewCBCDecrypter(block, iv)
+    plaintext = make([]byte, len(ciphertext)) 
+    mode.CryptBlocks(plaintext, ciphertext)
+    plaintext = unpad(plaintext)}
+
+    return plaintext, nil
+}
+```
+
+清单 11-4: AES填充和解密 (/ch-11/aes/main.go)
+
+代码中定义了两个函数：` unpad()` 和 `decrypt()` 。`unpad()` 函数是一个整合在一起的通用函数，用于处理解密后填充数据的删除。这是必要的步骤，但超出了此讨论的范围。有关更多信息请查阅 Public Key Cryptography Standards (PKCS) #7 。这是AES的一个相关主题，因为它用于确保我们的数据具有正确的块对齐方式。对于此示例，只知道以后需要使用该功能来清理数据。该函数本身假设要在实际场景中已明确验证了一些事实。具体来说，需要确认填充字节的值是否有效，切片偏移量是否有效以及结果的长度是否合适。
+
+最有趣的逻辑存在于 `delete()` 函数中，该函数使用两个字节切片：需要解密的密文和用于执行此操作的对称密钥。该函数先执行一些验证，至少确认密文与块大小长度相等。这是必要的步骤，因为CBC模式加密使用初始向量（IV）来实现随机性。该IV就像密码哈希的随机值一样，不需要保密。IV与单个AES块的长度相同，在加密过程中会加在密文上。如果密文长度小于预期的块大小，则说明密文有问题或缺少IV。还检查密文长度是否为AES块大小的倍数。否则，解密将失败，因为CBC模式期望密文长度为块大小的倍数。
+
+完成验证检查后，可以继续解密密文。如前所述，IV是加在密文之前的，因此要做的第一件事是从密文中提取IV。可以使用 `aes.BlockSize` 常量来检索IV，然后通过 `ciphertext = [aes.BlockSize:]` 将密文变量重新定义为密文的其余部分。现在，已将加密数据与IV分开了。
+
+接下来，调用 `aes.NewCipher()` ，并向其传递对称密钥。这将初始化AES块模式密码，并将其分配给名为 `block` 的变量。然后，通过调用 `cipher.NewCBCDecryptor(block,iv) 来明确AES密码以CBC模式运行。将结果赋值给名为 `mode` 的变量。（crypto/cipher包中有用于其他AES模式的初始化功能，但此处仅使用CBC解密。）然后，调用 `mode.CryptBlocks(plaintext，ciphertext)` ，用来解密密文的内容，并将结果存储在纯文本字节切片中。最后，通过调用 `unpad()` 通用函数来删除PKCS＃7填充。返回结果。如果一切正常，这应该是信用卡号的纯文本值。
+
+运行该示例，生成预期的结果：
+
+```sh
+$ go run main.go
+key = aca2d6b47cb5c04beafc3e483b296b20d07c32db16029a52808fde98786646c8
+ciphertext = 7ff4a8272d6b60f1e7cfc5d8f5bcd047395e31e5fc83d062716082010f637c8f21150eabace62 
+--snip--
+plaintext = 4321123456789090
+```
+
+注意，没有在此示例代码中定义 `main()` 函数。为什么没有呢？嗯，在陌生环境中解密数据会产生各种潜在的细微差别和变化。例如，密文和密钥值是编码的还是原始二进制的？如果已编码，它们是十六进制字符串还是Base64？数据是否在本地可访问，还是需要从数据源中提取数据或与硬件安全模块进行交互？键是，解密很少是复制粘贴的工作，通常需要对算法，模式，数据库交互和数据编码有一定程度的了解。因此，我们选择引导您找到答案，期望您在适当的时候弄清楚。
+
+只需了解一点对称密钥加密，就可以使渗透测试更加成功。例如，在我们窃取客户端源代码存储库的经验中，我们发现人们经常在CBC或Electronic Codebook（ECB）模式下使用AES加密算法。ECB模式有一些固有的弱点，如果使用不正确，CBC也不会更好。加密可能很难理解，因此开发人员经常认为所有加密密码和模式都同样有效，并且不了解其细微之处。尽管我们不认为自己是密码学家，但我们了解的知识足以在Go中安全地使用加密，并可以利用其他人的缺陷实现。
+
+尽管对称密钥加密比非对称加密更快，但是它遭受内在的密钥管理挑战。毕竟，要使用它，必须将相同的密钥分发给对数据执行加密或解密的系统或应用程序。必须经常遵循严格的流程和审核机制，才能安全地分发密钥。此外，例如，仅依赖对称密钥加密可以防止任意客户机与其他节点建立加密通信。没有一种很好的方法来协商密钥，也没有许多常见算法和模式的身份验证或完整性保证。这意味着获得密钥的任何人，无论是经过授权的还是恶意的，都可以继续使用它。
+
+这就是非对称密码学可以使用的地方。
