ch-11 Asymmetric Cryptography

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -259,3 +259,11 @@ plaintext = 4321123456789090
 尽管对称密钥加密比非对称加密更快，但是它遭受内在的密钥管理挑战。毕竟，要使用它，必须将相同的密钥分发给对数据执行加密或解密的系统或应用程序。必须经常遵循严格的流程和审核机制，才能安全地分发密钥。此外，例如，仅依赖对称密钥加密可以防止任意客户机与其他节点建立加密通信。没有一种很好的方法来协商密钥，也没有许多常见算法和模式的身份验证或完整性保证。这意味着获得密钥的任何人，无论是经过授权的还是恶意的，都可以继续使用它。
 
 这就是非对称密码学可以使用的地方。
+
+### 非对称加密
+
+与对称密钥加密相关的许多问题都可以通过非对称（或公钥）加密技术解决，该加密技术使用两个独立但在数学上相关的密钥。一个公开，而另一个私密。用私钥加密的数据只能用公钥解开，而用公钥加密的数据只能用私钥解开。如果私钥保护得当，且是私密的，那么使用公钥加密的数据仍然是私密的，因为需要严密保护的私钥来解密。不仅如此，还可以使用私钥对用户进行身份验证。用户可以使用私钥对消息签名，例如，公众可以使用公钥解密。
+
+因此，有人可能会问：“有什么收获呢？如果公钥加密提供了所有这些保证，那么为什么我们还要使用对称密钥加密呢？”，这是个好问题！公钥加密的问题在于它的速度。它比对称加密要慢得多。为了获得两全其美的效果（并避免最坏的情况），通常混合使用：初始通信时使用非对称加密，建立加密通道以创建和交换对称密钥（通常称为 *会话秘钥*）。由于会话密钥非常小，因此使用公钥加密进行此过程几乎不需要任何开销。然后，客户端和服务器都有会话密钥的副本，可使后面的通信更快。
+
+来看下公钥加密的几个常见用例。具体来说，加密，签名验证和相互认证。
