ch-11 Encryption and Signature Validation

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -267,3 +267,76 @@ plaintext = 4321123456789090
 因此，有人可能会问：“有什么收获呢？如果公钥加密提供了所有这些保证，那么为什么我们还要使用对称密钥加密呢？”，这是个好问题！公钥加密的问题在于它的速度。它比对称加密要慢得多。为了获得两全其美的效果（并避免最坏的情况），通常混合使用：初始通信时使用非对称加密，建立加密通道以创建和交换对称密钥（通常称为 *会话秘钥*）。由于会话密钥非常小，因此使用公钥加密进行此过程几乎不需要任何开销。然后，客户端和服务器都有会话密钥的副本，可使后面的通信更快。
 
 来看下公钥加密的几个常见用例。具体来说，加密，签名验证和相互认证。
+
+#### 加密和签名验证
+
+对于第一个示例，对消息使用公钥进行加密和解密。还将创建逻辑以对消息签名并验证该签名。为简单起见，将所有逻辑都放在 `main()`函数中。这旨在展示核心功能和逻辑，以便可以实现。在现实场景中，因为可能有两个远程节点相互通信，此过程可能要复杂一些。这些节点必须交换公钥。幸运的是，此交换过程不需要与交换对称密钥相同的安全保证。回想下，用公钥加密的任何数据只能由相关的私钥解密。因此，即使中间有人攻击来拦截公钥交换和之后的通信，也无法解密使用同一公钥加密的任何数据。只有私钥可以解密。
+
+来看一下清单11-5所示的实现。在查看示例时，我们将详细解释逻辑和加密功能。
+
+```go
+func main() {
+    var (
+        err 											error
+		privateKey 										*rsa.PrivateKey
+		publicKey										*rsa.PublicKey
+		message, plaintext, ciphertext, signature, label []byte
+	)
+    if privateKey, err = rsa.GenerateKey(rand.Reader, 2048); err != nil { 
+        log.Fatalln(err)
+	}
+	publicKey = &privateKey.PublicKey
+    
+    label = []byte("")
+	message = []byte("Some super secret message, maybe a session key even")
+	ciphertext, err = rsa.EncryptOAEP(sha256.New(), rand.Reader, publicKey, message, label) 
+    if err != nil {
+		log.Fatalln(err) 
+    }
+	fmt.Printf("Ciphertext: %x\n", ciphertext)
+    
+	plaintext, err = rsa.DecryptOAEP(sha256.New(), rand.Reader, privateKey, ciphertext, label) 
+    if err != nil {
+		log.Fatalln(err) 
+    }
+	fmt.Printf("Plaintext: %s\n", plaintext)
+    
+	h := sha256.New()
+	h.Write(message)
+	signature, err = rsa.SignPSS(rand.Reader, privateKey, crypto.SHA256, h.Sum(nil), nil) 
+    if err != nil {
+		log.Fatalln(err) 
+    }
+	fmt.Printf("Signature: %x\n", signature)
+    
+	err = rsa.VerifyPSS(publicKey, crypto.SHA256, h.Sum(nil), signature, nil)
+    if err != nil {
+		log.Fatalln(err) 
+    }
+	fmt.Println("Signature verified")
+}
+```
+
+清单 11-5: 非对称或公钥加密 (/ch-11/public-key/main.go/)
+
+该程序演示了两个独立但相关的公钥加密功能：加密/解密和消息签名。首先，通过调用 `rsa.GenerateKey()` 函数来生成一个公钥/私钥对。使用随机reader和key的长度作为函数的参数。假设随机reader和key的长度足以生成密钥，则结果为 `*rsa.PrivateKey` 实例，该实例包含其值为公钥的字段。现在有了一个有效的密钥对。为了方便起见，将公钥分配给它自己的变量。
+
+程序在每次运行时都会生成此密钥对。在大多数情况下，例如SSH通信，将一次生成密钥对保存到磁盘。私钥将保护好，公钥将分发到端点。在这里跳过密钥的分配，保护和管理，仅关注加密功能。
+
+创建密钥后，就可以开始使用它们进行加密了。调用函数 `rsa.EncryptOAEP() ，该函数参数为哈希函数，用于填充和随机的reader，公钥，要加密的消息以及可选标签。函数返回错误（如果输入导致算法失败）和密文。然后，将相同的哈希函数，reader，私钥，密文和标签传递到函数 `rsa.DecryptOAEP()` 中。函数使用私钥解密密文，并返回明文结果。
+
+注意，现在正在使用公钥加密消息。这样可以确保只有私钥持有者才能解密数据。接下来，通过调用 `rsa.SignPSS()` 创建数字签名。再次传递一个随机reader，私钥，使用的哈希函数，消息的哈希值以及代表其他选项的nil值。该函数返回错误和签名值。就像人类的DNA或指纹一样，此签名可以唯一地识别签名者的身份（即私钥）。持有公钥的任何人都可以验证签名，不仅可以确定签名的真实性，还可以验证消息的完整性。将公钥，哈希函数，哈希值，签名和其他选项传递给 `rsa.VerifyPSS()` 来验证签名。注意，在这里是将公钥而不是私钥传递给该函数。希望验证签名的端点将无法访问私钥，如果输入错误的密钥值，验证也不会成功。签名有效时，`rsa .VerifyPSS()` 函数返回nil，而无效时返回错误。
+
+下面是该示例的运行结果。其表现符合预期，使用公钥加密消息，使用私钥解密消息，并验证签名：
+
+```sh
+$ go run main.go
+Ciphertext: a9da77a0610bc2e5329bc324361b480ba042e09ef58e4d8eb106c8fc0b5
+--snip--
+Plaintext: Some super secret message, maybe a session key even
+Signature: 68941bf95bbc12edc12be369f3fd0463497a1220d9a6ab741cf9223c6793
+--snip--
+Signature verified
+```
+
+接下来，看一下公钥加密的另一种应用：相互认证。
