ch-11 Mutual Authentication

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -340,3 +340,172 @@ Signature verified
 ```
 
 接下来，看一下公钥加密的另一种应用：相互认证。
+
+#### 相互认证
+
+相互认证是客户端和服务器相互认证的过程。他们使用公钥加密来完成。客户端和服务器都将生成公钥/私钥对，交换公钥，并使用公钥来验证另一个端点的真实性和身份。要实现这一壮举，客户端和服务器都必须做额外的工作来设置授权，明确定义他们打算用来验证彼此的公钥。此过程的不利方面是管理开销，必须为每个节点创建唯一的密钥对，并确保服务器和客户端节点具有适当的数据以正确进行。
+
+首先，将移除创建密钥对的管理任务。将公钥存储为自签名的，PEM编码的证书。使用openssl 工具创建这些文件。在服务器上，通过输入以下内容来创建服务器的私钥和证书：
+
+```sh
+$ openssl req -nodes -x509 -newkey rsa:4096 -keyout serverKey.pem -out serverCrt.pem -days 365
+```
+
+openssl命令将提示输入各种输入，在此示例中，可以用任意值。该命令创建两个文件：serverKey.pem和serverCrt.pem。文件serverKey.pem含有私钥，必须保护好。 serverCrt.pem文件包含服务器的公钥，将其分发给每个连接的客户端。
+
+对于每个连接的客户端，运行与上面类似的命令：
+
+```sh
+$ openssl req -nodes -x509 -newkey rsa:4096 -keyout clientKey.pem -out clientCrt.pem -days 365
+```
+
+命令也生成两个文件：clientKey.pem和clientCrt.pem。与服务器输出一样，保护好客户端的私钥。 clientCrt.pem证书文件将发送到服务器并由程序加载。这就可以配置客户端并将其标识为授权端点。必须为其他每个客户端创建，传输和配置证书，以便服务器可以识别并明确授权它们。
+
+在清单11-6中，创建了一个HTTPS服务器，该服务器要求客户端提供合法的授权证书。
+
+```go
+func helloHandler(w http.ResponseWriter, r *http.Request) {
+    fmt.Printf("Hello: %s\n", r.TLS.PeerCertificates[0].Subject.CommonName)
+    fmt.Fprint(w, "Authentication successful")
+}
+func main() {
+    var (
+        err			error
+        clientCert	[]byte
+        pool		*x509.CertPool
+        tlsConf		*tls.Config
+        server		*http.Server
+	)
+    
+	http.HandleFunc("/hello", helloHandler)
+
+    if clientCert, err = ioutil.ReadFile("../client/clientCrt.pem"); err != nil { 
+        log.Fatalln(err)
+	}
+	pool = x509.NewCertPool() 
+    pool.AppendCertsFromPEM(clientCert) 
+
+    tlsConf = &tls.Config{
+		ClientCAs: pool,
+		ClientAuth: tls.RequireAndVerifyClientCert,
+	}
+	tlsConf.BuildNameToCertificate() z
+
+    server = &http.Server{ 
+        Addr: ":9443", 
+        TLSConfig: tlsConf,
+	}
+	log.Fatalln(server.ListenAndServeTLS("serverCrt.pem", "serverKey.pem")) 
+}
+```
+
+清单 11-6: 创建相互认证的服务器 (/ch-11/mutual-auth/cmd/server/main.go)
+
+`main()` 函数外定义了 `helloHandler()` 函数。正如在第3章和第4章中讨论的那样，处理程序函数接受 `http.ResponseWriter` 实例和`http.Request` 实例。这个函数非常无聊。记录接收到的客户端证书的通用名。通过检查 `http.Request的TLS` 字段并深入查看证书`PeerCertificates` 数据，可以访问通用名。处理函数还会向客户端发送一条消息，表明身份验证成功。
+
+但是，如何定义授权哪些客户端，以及如何对它们进行身份验证呢？这个过程相当轻松。首先要从客户端先前创建的PEM文件中读取客户端的证书。由于可能有多个授权的客户端证书，因此可以创建一个证书池和调用池。`AppendCertsFromPEM(clientCert)` 可以将客户端证书添加到池中。对要验证的每个其他客户端执行此步骤。
+
+接下来，创建TLS配置。将`ClientCAs`字段明确地设置为池，并将 `ClientAuth` 配置为 `tls.RequireAndVerifyClientCert` 。该配置定义了授权客户端池，并要求客户端在允许继续之前先正确地标识自己。调用 `tlsConf.BuildNameToCertificate()` ，以便客户端的通用名和主题备用名（为其生成证书的域名）将正确映射给定的证书。并通过调用 `server.ListenAndServeTLS()` 启动服务器。将先前创建的服务器证书和私钥文件传递给它。注意的是，服务器中的代码并没有使用客户端的私钥文件。就像之前说过的那样，私钥仍然是私密的；服务器仅使用客户端的公钥来识别和授权客户端。这是公钥加密的特色。
+
+使用 `curl` 来验证服务器。如果生成并提供了伪造的，未经授权的客户证书和密钥，则会收到一条详细的消息：
+
+```sh
+$ curl -ik -X GET --cert badCrt.pem --key badKey.pem \ 
+	https://server.blackhat-go.local:9443/hello
+curl: (35) gnutls_handshake() failed: Certificate is bad
+```
+
+同样在服务器也收到一条更详细的消息，如下所示：
+
+```sh
+http: TLS handshake error from 127.0.0.1:61682: remote error: tls: unknown certificate authority
+```
+
+另一方面，如果使用的是有效的证书和与服务器池中配置的证书相匹配的密钥，则成功验证时会有点自豪：
+
+```sh
+$ curl -ik -X GET --cert clientCrt.pem --key clientKey.pem \ 
+	https://server.blackhat-go.local:9443/hello
+HTTP/1.1 200 OK
+Date: Fri, 09 Oct 2020 16:55:52 GMT 
+Content-Length: 25
+Content-Type: text/plain; charset=utf-8
+
+Authentication successful
+```
+
+此消息表明服务器正常。
+
+现在来看下客户端（清单11-7）。可以在与服务器相同或不同的系统上运行客户端。如果在其他系统上，则需要将 `clientCrt.pem` 发送到服务器，将 `serverCrt.pem` 发送到客户端。
+
+```go
+func main() {
+    var (
+        err 				error
+        cert 				tls.Certificate
+        serverCert, body	[]byte
+		pool 				*x509.CertPool 
+        tlsConf 			*tls.Config
+        transport 			*http.Transport 
+		client 				*http.Client 
+		resp 				*http.Response
+    )
+	if cert, err = tls.LoadX509KeyPair("clientCrt.pem", "clientKey.pem"); err != nil {
+        log.Fatalln(err)
+	}
+    
+	if serverCert, err = ioutil.ReadFile("../server/serverCrt.pem"); err != nil {
+        log.Fatalln(err)
+	}
+
+    pool = x509.NewCertPool()
+	pool.AppendCertsFromPEM(serverCert) 
+
+    tlsConf = &tls.Config{
+		Certificates: []tls.Certificate{cert}, 
+        RootCAs: pool,
+	} 
+    tlsConf.BuildNameToCertificate()
+    
+	transport = &http.Transport{
+        TLSClientConfig: tlsConf,
+	}
+	client = &http.Client{{
+        Transport: transport,
+    }
+                          
+	if resp, err = client.Get("https://server.blackhat-go.local:9443/hello"); err != nil {
+        log.Fatalln(err)
+	}
+	if body, err = ioutil.ReadAll(resp.Body); err != nil {
+		log.Fatalln(err) 
+    }
+	defer resp.Body.Close()
+	fmt.Printf("Success: %s\n", body) 
+}
+```
+
+清单 11-7: 相互认证的客户端 (/ch-11/mutual-auth/cmd/client/main.go)
+
+许多证书的准备和配置工作与服务器代码相似：创建证书池并准备主题名和通用名。由于不会使用客户端证书和密钥作为服务器，因此调用 `tls.LoadX509KeyPair(“ clientCrt.pem”, “ clientKey.pem”)` 来加载它们以供后面使用。还读取了服务器证书，并将其添加到希望允许的证书池中。然后，使用池和客户端证书来构建TLS配置，并调用 `tlsConf.BuildNameToCertificate()`  将域名绑定到其相应的证书。
+
+由于创建的是HTTP客户端，因此必须定义一种传输方式，并关联TLS配置。然后，使用传输实例来创建http.Client结构。如在第3章和第4章中讨论的那样，使用此客户端通过 `client.Get(“ https://server.blackhat-go.local:9443 / hello”)` 进行HTTP GET请求。
+
+此时，幕后正在执行相互身份验证——客户端和服务器相互进行身份验证。如果身份验证失败，程序将返回错误并退出。否则，读取HTTP响应体并将其显示到stdout。运行客户端代码会产生预期的结果，具体是没有抛出任何错误并且身份验证成功：
+
+```sh
+$ go run main.go
+Success: Authentication successful
+```
+
+服务器输出如下所示。回想一下，已将服务器配置为将问候消息记录到标准输出中。此消息包含从证书中提取的连接客户端的通用名称：
+
+```sh
+$ go run main.go
+Hello: client.blackhat-go.local
+```
+
+现在，已经有了相互身份验证的例子。为加强理解，我们建议使用TCP socket 修改示例。
+
+在下一部分中，竭尽全力达到更高的目标：暴力破解RC2加密的对称密钥。
+
