ch-11 Brute-Forcing RC2

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -509,3 +509,8 @@ Hello: client.blackhat-go.local
 
 在下一部分中，竭尽全力达到更高的目标：暴力破解RC2加密的对称密钥。
 
+## 暴力破解RC2
+
+RC2是罗恩·里维斯特（Ron Rivest）于1987年创建的对称密钥分组密码。在政府的建议下，设计人员使用了40位加密密钥，该密码的强度足以使美国政府对密钥进行暴力破解和解密通讯。例如，它为大多数通信提供了充分的机密性，但允许政府窥探与外国实体的通话。当然，早在1980年代，强行破解密钥就需要强大的计算能力，只有资金雄厚的国家或专业组织才能在合理的时间内解密该密钥。快速发展30年的今天，普通家用计算机可以在几天或几周内暴力破解40位密钥。
+
+所以，管他呢，让我们暴力破解40位密钥。
