ch-11 Getting Started

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -514,3 +514,55 @@ Hello: client.blackhat-go.local
 RC2是罗恩·里维斯特（Ron Rivest）于1987年创建的对称密钥分组密码。在政府的建议下，设计人员使用了40位加密密钥，该密码的强度足以使美国政府对密钥进行暴力破解和解密通讯。例如，它为大多数通信提供了充分的机密性，但允许政府窥探与外国实体的通话。当然，早在1980年代，强行破解密钥就需要强大的计算能力，只有资金雄厚的国家或专业组织才能在合理的时间内解密该密钥。快速发展30年的今天，普通家用计算机可以在几天或几周内暴力破解40位密钥。
 
 所以，管他呢，让我们暴力破解40位密钥。
+
+### 开始
+
+在深入研究代码之前，先做好准备。首先，Go的标准库和扩展加密库都没有可用的RC2包。但是，有一个内部Go包。无法直接在外部程序中导入内部包，因此必须找其他的使用方式。
+
+其次，为简单起见，通常假设一些不希望创建的数据。具体是，假定明文数据的长度是RC2块大小（8字节）的倍数，避免处理PKCS #5填充等管理任务造成逻辑混乱。处理填充类似于本章前面使用AES所做的事情(请参见清单11-4)，但是需要更仔细地验证内容，以维护将要处理的数据的完整性。还将假设密文是一个加密的信用卡号。通过验证生成的纯文本数据来检查可能的密钥。在这种情况下，验证数据涉及确保文本为数字，然后对其进行 `Luhn check`，这是验证信用卡号和其他敏感数据的一种方法。
+
+接下来，假设能够（也许是通过窃取文件系统数据或源代码）确定了使用40位密钥以ECB模式加密了数据而没有初始化矢量。RC2支持可变长度的密钥，并且由于它是分组密码，因此可以在不同的模式下运行。在最简单的模式ECB模式下，数据块独立于其他块进行加密。逻辑更简单了。最后，尽管可以并发破解密钥，如果这样做的话，并发实现的性能会好得多。与其先构建非并发版本，再去迭代，不如从一开始就直接构建并发的版本。
+
+现在再安装几个需要的包。首先从 *https://github.com/golang/crypto/blob/master/pkcs12/internal/rc2/rc2.go* 获取官方Go实现的RC2。将其安装在本地工作区中，以便导入到暴力破解工具中。正如我们前面提到的，该包是内部包，也就意味着在默认情况下，外部包无法导入和使用。虽然点麻烦，但是也就不用使用第三包，或者自己去实现RC2加密了。如果复制到工作区中，就可以访问未导出的函数和类型。
+
+还要安装用于执行Luhn检查的包：
+
+```sh
+$ go get github.com/joeljunstrom/go-luhn
+```
+
+Luhn检查计算信用卡号码或其他识别数据的校验和来验证是否有效。使用现有的包，该包有非常好的文档，还不用重复造轮子。
+
+现在可以开始写代码了。遍历整个密钥空间（40位）的每种组合，使用每个密钥解密密文，然后验证结果，即结果只有数字并能通过Luhn检查。使用生产者/消费者模型来实现——生产者把密钥发送到管道中，而消费者从管道中读取密钥并执行。工作本身是一个单一的键值。当找到通过正确验证的明文密钥（表明已找到信用卡号）时，向每个goroutine发信号让其停止工作。
+
+这个问题的一个有趣挑战是如何迭代键空间。我们的解决方案是，使用for循环对其进行迭代，遍历表示为uint64值的键空间。正如所看到的，挑战是uint64占用了内存的64位空间。因此，从uint64转换为40位（5字节）[] byte RC2密钥要裁剪掉24位（3字节）的不必要数据。希望看到代码就会明白该过程。我们会慢慢来，分解程序的各个部分，一个一个地进行。从清单11-8开始。
+
+```go
+import ( 
+    "crypto/cipher"
+	"encoding/binary" 
+    "encoding/hex" 
+    "fmt"
+	"log"
+	"regexp" 
+    "sync"
+    
+	luhn "github.com/joeljunstrom/go-luhn" 
+    
+    "github.com/bhg/ch-11/rc2-brute/rc2"
+)
+var numeric = regexp.MustCompile(`^\d{8}$`)
+
+type CryptoData struct { 
+    block cipher.Block
+	key []byte 
+}
+```
+
+清单 11-8：导入 RC2 暴力破解类型 (/ch-11/rc2-brute/main.go)
+
+为了强调第三方 `go-luhn` 包和从Go内部库中克隆的 `rc2` 包，我们在清单中列出了 import 语句。还编译了一个正则表达式，用来检查生成的纯文本块是否为8字节的数据。
+
+请注意，检查的是8字节的数据，而不是16字节的数据，因为这是信用卡号的长度。检查8个字节，还因为这是RC2块的长度。逐块解密密文，因此可以检查解密的第一个块是否为数字。如果该块的8个字节不全是数字，则可以肯定地推断出没有使用信用卡号，完全可以跳过第二个密文块的解密。性能上的微小改进将大大减少执行数百万次所需的时间。
+
+最后，定义名为 `CryptoDatax` 的类型，该类型将用于存储密钥和 `cipher.Block`。使用该`struct` 来定义工作单位，即生产者创建的工作单元，消费者进行操作的单元。
