ch-11 Producing Work

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -566,3 +566,57 @@ type CryptoData struct {
 请注意，检查的是8字节的数据，而不是16字节的数据，因为这是信用卡号的长度。检查8个字节，还因为这是RC2块的长度。逐块解密密文，因此可以检查解密的第一个块是否为数字。如果该块的8个字节不全是数字，则可以肯定地推断出没有使用信用卡号，完全可以跳过第二个密文块的解密。性能上的微小改进将大大减少执行数百万次所需的时间。
 
 最后，定义名为 `CryptoDatax` 的类型，该类型将用于存储密钥和 `cipher.Block`。使用该`struct` 来定义工作单位，即生产者创建的工作单元，消费者进行操作的单元。
+
+### 生成者
+
+让我们看一下生产者函数（清单11-9）。将该函数放置在前面的代码清单中的类型定义之后。
+
+```go
+func generate(start, stop uint64, out chan <- *CryptoData, done <- chan struct{}, wg *sync.WaitGroup) {
+	wg.Add(1) 
+    go func() {
+		defer wg.Done() 
+        var (
+			block cipher.Block 
+            err error
+			key []byte
+			data *CryptoData
+		)
+		for i := start; i <= stop; i++ {
+			key = make([]byte, 8) 
+            select {
+			case <- done: 
+                return
+			default: 
+                binary.BigEndian.PutUint64(key, i)
+				if block, err = rc2.New(key[3:], 40); err != nil { 
+                    log.Fatalln(err)
+				}
+				data = &CryptoData{
+                       block: block,
+                       key:   key[3:],
+                }
+				out <- data 
+            }
+        }
+	}()
+    
+	return 
+}
+```
+
+清单 11-9:  RC2 生产者函数 (/ch-11/rc2-brute/main.go)
+
+生产者函数名为 `generate()` 。该函数接受两个uint64变量，这些变量用于定义生产者将在其上创建工作的密钥空间的一部分（基本上是他们将产生密钥的范围）。可以分解密钥空间，并将部分分配给每个生产者。
+
+该函数参数还有两个管道：`CryptData` 只写管道，用于将工作推送给消费者，一个普通的`struct` 管道，该管道用于接收来自消费者的信号。第二个管道是必需的，例如，识别出正确密钥的使用者可以明确地通知生产者停止生产。如果已经解决了问题，那么创建更多的工作毫无意义。最后，函数接受一个 `WaitGroup`，用于跟踪和同步生产者的执行。对于每个并发运行的生产者，执行 `wg.Add(1)` 告诉`WaitGroup` 启动了一个新的生产者。
+
+在goroutine中填充工作管道，还有当 goroutine退出时调用 `defer wg.Done() 通知 `WaitGroup`。这样就不会出现死锁，`main()` 函数可以继续执行。`for` 循环中的 `start` 和 `stop` 来迭代key剩余的部分。循环的每次迭代都会增加i变量，直到达到结束偏移量为止。
+
+如前所述，key大小为40位，而i为64位。这种大小差异对于理解至关重要。Go中没有40位的类型。只有32位或64位类型。由于32位太小而无法容纳40位，因此需要改用64位，并在以后再考虑额外的24位。如果可以使用[]byte而不是uint64来迭代整个key，则可以避免。但是这样做可能需要一些位操作，可能会使示例过于复杂。因此，还是处理长度的细微差别。
+
+在循环中使用一个select语句，乍一看可能很愚蠢，因为是操作管道中的数据，不适合典型语法。通过 `case <- done`来检查 `done` 管道是否关闭。如果管道关闭，则使用 `return` 退出goroutine。当 `done` 管未关闭时，执行 `default` 分支创建定义工作所需的加密实例。具体是，调用 `binary.BigEndian.PutUint64(key, i)` 将uint64值（当前密钥）写入名为key 的 []byte中。
+
+尽管之前没有明确指出，但还是将key初始化为8字节切片。那么为什么只处理5字节key，还要将切片定义为8字节呢？这是因为`binary.BigEndian.PutUint64` 带有uint64值，所以它需要8字节的目标切片，否则会抛出超出索引范围的错误。注意剩余的代码中，仅用到了key切片的最后5个字节。即使前3个字节为零，如果包括在内，它们仍将破坏加密函数的紧缩性。这就是为什么最初调用 `rc2.New(key [3：], 40)` 来创建密码的原因。这样就丢弃3个无关的字节，并且还会传入密钥的长度（以位为单位）：40。使用生成的`cipher.Block` 实例和相关的key字节创建 `CryptoData` 对象，并将其写入out 消费者管道。
+
+这是生产者代码。注意在本部分中，仅引导需要的相关关键数据。在这个函数中，没有任何地方是真正解密的。解密工作将会在消费者函数中执行。
