ch-11 Performing Work and Decrypting Data

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -620,3 +620,46 @@ func generate(start, stop uint64, out chan <- *CryptoData, done <- chan struct{}
 尽管之前没有明确指出，但还是将key初始化为8字节切片。那么为什么只处理5字节key，还要将切片定义为8字节呢？这是因为`binary.BigEndian.PutUint64` 带有uint64值，所以它需要8字节的目标切片，否则会抛出超出索引范围的错误。注意剩余的代码中，仅用到了key切片的最后5个字节。即使前3个字节为零，如果包括在内，它们仍将破坏加密函数的紧缩性。这就是为什么最初调用 `rc2.New(key [3：], 40)` 来创建密码的原因。这样就丢弃3个无关的字节，并且还会传入密钥的长度（以位为单位）：40。使用生成的`cipher.Block` 实例和相关的key字节创建 `CryptoData` 对象，并将其写入out 消费者管道。
 
 这是生产者代码。注意在本部分中，仅引导需要的相关关键数据。在这个函数中，没有任何地方是真正解密的。解密工作将会在消费者函数中执行。
+
+### 运行并解密数据
+
+现在来看一下消费者函数（清单11-10）。同样地将此函数添加到与先前代码相同的文件中。
+
+```go
+func decrypt(ciphertext []byte, in <- chan *CryptoData, done chan struct{}, wg *sync.WaitGroup) {
+	size := rc2.BlockSize
+	plaintext := make([]byte, len(ciphertext)) 
+    wg.Add(1)
+	go func() {
+		defer wg.Done()
+		for data := range in {
+			select { 
+            case <- done:
+				return 
+            default:
+				data.block.Decrypt(plaintext[:size], ciphertext[:size]) 
+                if numeric.Match(plaintext[:size]) {
+					data.block.Decrypt(plaintext[size:], ciphertext[size:]) 
+                    if luhn.Valid(string(plaintext)) && numeric.Match(plaintext[size:]) {
+						fmt.Printf("Card [%s] found using key [%x]\n", plaintext, data.key)
+						close(done)
+						return
+					} 
+                }
+			} 
+        }
+	}() 
+}
+```
+
+清单 11-10: RC2 消费者函数 (/ch-11/rc2-brute/main.go)
+
+消费者函数名为 `decrypt()` ，接收几个参数。接收待解密的密文。还接受两个管道：一个名为 `*CryptoData` 的只读管道，用作工作队列），一个名为 `done` 的管道，用于发送和接收明确的取消信号。最后还接受一个名为 `wg` 的 `*sync.WaitGroup`，用于管理消费者，非常像生产者的实现。调用`wg.Add(1)`告诉WaitGroup启动一个消费者。这样，就可以跟踪和管理所有运行中的消费者了。
+
+接下来，在goroutine中，调用 `defer wg.Done()`，以便在goroutine函数结束时，更新WaitGroup状态，从而将正在运行的工作程序数量减少1。这种WaitGroup业务对于跨任意数量的工作者同步程序的执行是必要的。稍后在 `main()` 函数中使用 `WaitGroup` 来等待`goroutines` 执行完成。
+
+消费者在 `for` 循环中重复读取 `in` 管道中的 `CryptoData` 。管道关闭时循环停止。这个管道是由生产者填充的。很快就会看到，在生产者遍历它们的整个key空间子部分并将相应的加密数据推入工作管道道后，该管道关闭。因此，消费者不断循环，直到生产者完成生产为止。
+
+像生产者代码那样，在for循环中使用 `select` 语句来检查 `done` 管道是否关闭，如果已经关闭，则显式地通知消费者停止额外的工作。识别出有效的信用卡号时将关闭通道，稍后我们将对此进行讨论。`default` 分支执行加密的工作。首先，解密密文的第一个块（8个字节），检查生成的明文是否为8字节的数字值。如果是，则可能是卡号，然后继续解密第二个密文块。从管道中读取 `CryptoData` 对象，通过对象中的 `cipher .Block ` 字段调用解密函数。回想一下，生产者使用从key空间获取的唯一key实例化了该结构。
+
+最后，根据Luhn算法验证整个明文，并验证第二个明文块是一个8字节的数字。如果这些检查成功，则可以确定找到了一个有效的信用卡号。在stdout显示卡号和输入的key，然后调用 `close(done)`向其他goroutine发出信号，表明已经找到了。
