ch-11 Writing the Main Function

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -663,3 +663,63 @@ func decrypt(ciphertext []byte, in <- chan *CryptoData, done chan struct{}, wg *
 像生产者代码那样，在for循环中使用 `select` 语句来检查 `done` 管道是否关闭，如果已经关闭，则显式地通知消费者停止额外的工作。识别出有效的信用卡号时将关闭通道，稍后我们将对此进行讨论。`default` 分支执行加密的工作。首先，解密密文的第一个块（8个字节），检查生成的明文是否为8字节的数字值。如果是，则可能是卡号，然后继续解密第二个密文块。从管道中读取 `CryptoData` 对象，通过对象中的 `cipher .Block ` 字段调用解密函数。回想一下，生产者使用从key空间获取的唯一key实例化了该结构。
 
 最后，根据Luhn算法验证整个明文，并验证第二个明文块是一个8字节的数字。如果这些检查成功，则可以确定找到了一个有效的信用卡号。在stdout显示卡号和输入的key，然后调用 `close(done)`向其他goroutine发出信号，表明已经找到了。
+
+### Main 函数
+
+至此，已经有了生产者和消费者函数，都可以并发执行。现在，在 `main()` 函数（清单11-11）中将这些内容整合在一起，代码也在与前面清单相同的源文件中。
+
+```go
+func main() {
+    var (
+    	err			error
+    	ciphertext	[]byte
+	)
+    
+    if ciphertext, err = hex.DecodeString("0986f2cc1ebdc5c2e25d04a136fa1a6b"); err != nil {
+        log.Fatalln(err)
+	}
+
+    var prodWg, consWg sync.WaitGrou
+    var min, max, prods = uint64(0x0000000000), uint64(0xffffffffff), uint64(75)
+    var step = (max - min) / prods
+
+    done := make(chan struct{})
+    work := make(chan *CryptoData, 100)
+    if (step * prods) < max {
+		step += prods 
+    }
+    var start, end = min, min + step
+    log.Println("Starting producers...") 
+    for i := uint64(0); i < prods; i++ {
+		if end > max { 
+            end = max
+		}
+		generate(start, end, work, done, &prodWg)y 
+        end += step
+		start += step
+	}
+	log.Println("Producers started!") log.Println("Starting consumers...") 
+    for i := 0; i < 30; i++ {
+		decrypt(ciphertext, work, done, &consWg)
+    }
+	log.Println("Consumers started!") 
+    log.Println("Now we wait...") 
+    prodWg.Wait()
+	close(work)
+	consWg.Wait()}
+	log.Println("Brute-force complete") 
+}
+```
+
+清单 11-11:  RC2 *main() 函数 (/ch-11/rc2-brute/main.go)
+
+`main()` 函数对密文进行解码，以十六进制字符串表示。接下来定义几个变量。第一个， `WaitGroup` 变量用于追踪生产者和消费者的 goroutine。还定义了几个uint64值，跟踪40位key的最小值（0x0000000000），最大值（0xffffffffff），及打算启动的生产者数量，在代码中为75。使用这些值来计算每个生产者要迭代key的数量的步长或范围，因为要将这些工作均匀地分配给所有生产者。还创建一个 `*CryptoData` 管道道和一个 `done` 管道。将它们传递给生产者和消费者。
+
+因为需要做基本的整数计算来计算生产者的步长值，所以如果key大小不是生产者数量的倍数，则很有可能会丢失一些数据。为了解决这个问题——并避免在转换为浮点数时丢失精度，调用 `math.Ceil()` ——检查最大key (step * prods)是否小于整个key的最大值(0xffffffffff)。如果是这样，则不会考虑key中少数的几个值。只需增加 `step` 值即可解决这一不足。初始化两个变量 `start` 和 `end`，维持分割key的起始偏移量和结束偏移量。
+
+无论如何，计算偏移量和步长都不精确，这可能会导致代码搜索超出最大允许的key。但是，可以在每个生产者的 `for` 循环中修复该问题。在循环中，如果该值超出最大key，则可以调整结束步长值 `end`。循环的每次迭代都会调用生产者函数 `generate()`，并且每次迭代时将key的偏移开始（start）和结束（end）传递给它。还将 `work` 和 `done` 管道，`WaitGroup` 传递给它。调用该函数后，移动`start` 和 `end` 变量，准备下次循环时传递给新生产者。这样就把秘钥分成较小的、更易计算的部分，程序可以并发处理，goroutine之间也不会进行重复工作。
+
+生产者启动后，使用 `for` 循环来创建工作。本例中创建了30个。每次迭代都调用 `crypto()` 函数，并将密文，work管道，`done`管道和消费者的 `WaitGroup` 传递给该函数。这样消费者就并发的工作，当生产者创建工作时，并发消费者就开始拉取和处理工作。
+
+遍历整个key花费的时间。如果处理不正确，`main()` 函数肯定会在发现密钥或耗尽密钥空间之前退出。因此，需要确保生产者和消费者有足够的时间来迭代整个密钥空间或发现正确的密钥。这就需要用到 `WaitGroups` 。调用 `prodWg.Wait()` 阻塞 `main()` 函数，直到生产者完成任务。回想一下，如果生产者耗尽了密钥空间，或通过 `done` 管道明确地取消了处理，生产者完成了他们的任务。任务完成后，明确地关闭 `work` 管道，防止消费者从 `work` 管道读取数据时死锁。最后，调用 `consWg.Wait()` 再次阻塞 `main()`，以便为`WaitGroup` 中的使用者提供足够的时间来完成工作通道中的所有剩余的 `work`。
+
