ch-11 Running the Program

--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -723,3 +723,21 @@ func main() {
 
 遍历整个key花费的时间。如果处理不正确，`main()` 函数肯定会在发现密钥或耗尽密钥空间之前退出。因此，需要确保生产者和消费者有足够的时间来迭代整个密钥空间或发现正确的密钥。这就需要用到 `WaitGroups` 。调用 `prodWg.Wait()` 阻塞 `main()` 函数，直到生产者完成任务。回想一下，如果生产者耗尽了密钥空间，或通过 `done` 管道明确地取消了处理，生产者完成了他们的任务。任务完成后，明确地关闭 `work` 管道，防止消费者从 `work` 管道读取数据时死锁。最后，调用 `consWg.Wait()` 再次阻塞 `main()`，以便为`WaitGroup` 中的使用者提供足够的时间来完成工作通道中的所有剩余的 `work`。
 
+### 运行程序
+
+程序已经完成了！如果运行会有下面的输出：
+
+```sh
+$ go run main.go
+2020/07/12 14:27:47 Starting producers...
+2020/07/12 14:27:47 Producers started!
+2020/07/12 14:27:47 Starting consumers...
+2020/07/12 14:27:47 Consumers started!
+2020/07/12 14:27:47 Now we wait...
+2020/07/12 14:27:48 Card [4532651325506680] found using key [e612d0bbb6] 2020/07/12 14:27:48 Brute-force complete
+```
+
+程序启动了生产者和消费者，然后等待他们执行。当找到信用卡时，程序将显示明文的卡号和用于解密该卡的密钥。因为我们假设此密钥是所有卡的神奇密钥，所以我们提前中断执行，并通过画一幅自画像来庆祝我们的成功。
+
+当然，根据秘钥的不同，家用计算机上的暴力破解可能会花费大量时间——数天甚至数周。对于前面运行的示例，为了更快地找到密钥而缩小了密钥空间。然而，在2016年的MacBook Pro上完全耗尽秘钥空间大约需要7天。对于在笔记本电脑上运行的快速而肮脏的解决方案来说，这还不算太坏。
+
