--- a/ch-11/第11章：加密的实现和攻击.md
+++ b/ch-11/第11章：加密的实现和攻击.md
@@ -741,3 +741,7 @@ $ go run main.go
 
 当然，根据秘钥的不同，家用计算机上的暴力破解可能会花费大量时间——数天甚至数周。对于前面运行的示例，为了更快地找到密钥而缩小了密钥空间。然而，在2016年的MacBook Pro上完全耗尽秘钥空间大约需要7天。对于在笔记本电脑上运行的快速而肮脏的解决方案来说，这还不算太坏。
 
+## 总结
+
+对于安全从业者来说，加密是一个重要的课题，尽管学习过程可能有些周折。本章介绍了对称和非对称加密、哈希、使用bcrypt处理密码、消息身份验证、相互身份验证和暴力破解RC2。在下一章中，我们将深入探讨如何攻击Microsoft Windows。
+
